--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Title</title>
-  </head>
-  <body>
-    <h1>Header</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <img src="dog.jpg">
-    <img src="cat.jpg">
-  </body>
-</html>
+<HTML>
+<HEAD>
+<TITLE>Your Title Here</TITLE>
+</HEAD>
+<BODY BGCOLOR="FFFFFF">
+<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
+<HR>
+<a href="http://somegreatsite.com">Link Name</a>
+is a link to another nifty site
+<H1>This is a Header</H1>
+<H2>This is a Medium Header</H2>
+Send me mail at <a href="mailto:support@yourcompany.com">
+support@yourcompany.com</a>.
+<P> This is a new paragraph!
+<P> <B>This is a new paragraph!</B>
+<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+<HR>
+</BODY>
+</HTML>
