--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE>Your Title Here</TITLE>
+<TITLE>mikaelan sivu</TITLE>
 </HEAD>
 <BODY BGCOLOR="FFFFFF">
 <CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
