--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <BODY BGCOLOR="FFFFFF">
 <CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
-<a href="https://www.instagram.com/mikaelakatro/">Link Name</a>
-is a link to another nifty site
+<a href="https://www.instagram.com/mikaelakatro/">See my photos</a>
+on Instagram
 <H1>This is a Header</H1>
 <H2>This is a Medium Header</H2>
 Send me mail at <a href="mailto:support@yourcompany.com">
