--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 <BODY BGCOLOR="FFFFFF">
 <CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
+<H1>mikaela's photo booth</H1>
 <a href="https://www.instagram.com/mikaelakatro/">See my photos</a>
 on Instagram
-<H1>This is a Header</H1>
+
 <H2>This is a Medium Header</H2>
-Send me mail at <a href="mailto:support@yourcompany.com">
+Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
 support@yourcompany.com</a>.
 <P> This is a new paragraph!
 <P> <B>This is a new paragraph!</B>
