--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ on Instagram
 
 <H2>This is a Medium Header</H2>
 Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
-support@yourcompany.com</a>.
+mikaela.katro@hotmail.com</a>
 <P> This is a new paragraph!
 <P> <B>This is a new paragraph!</B>
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
