--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
 <H1>mikaela's photo booth</H1>
+<P> This is a new paragraph!
+  
 <a href="https://www.instagram.com/mikaelakatro/">See my photos</a>
 on Instagram
 
@@ -14,7 +16,7 @@ Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
 mikaela.katro@hotmail.com</a>
 <P> This is a new paragraph!
 <P> <B>This is a new paragraph!</B>
-<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+<BR> <B><I>At the end of our streets is sunrise; At the end of our streets are spars; At the end of our streets is sunset; At the end of our streets the stars. -George Sterling.</I></B>
 <HR>
 </BODY>
 </HTML>
