--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 <CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
 <H1>mikaela's photo booth</H1>
-<P> This is a new paragraph!
+  
+<img src="pic.jpg">
+ 
+
+  
+  
+  
+  <P> This is a new paragraph!</B>
   
 <a href="https://www.instagram.com/mikaelakatro/">See my photos</a>
 on Instagram
