--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <HR>
 <H1>mikaela's photo booth</H1>
   
-<img src="5877_10151750931413534_1392706102_n.jpg">
+<img src="5877_10151750931413534_1392706102_n.jpg, height="100", width="100">
  
 
   
