--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
 mikaela.katro@hotmail.com</a>
 <P> This is a new paragraph!
 <P> <B>This is a new paragraph!</B>
-<BR> <B><I>At the end of our streets is sunrise; At the end of our streets are spars; At the end of our streets is sunset; At the end of our streets the stars. -George Sterling.</I></B>
+<BR> <B><I>At the end of our streets is sunrise;</BR> 
+<BR> <B><I>At the end of our streets are spars;</BR>
+<BR> <B><I>At the end of our streets is sunset; At the end of our streets the stars. -George Sterling.</I></BR>
 <HR>
 </BODY>
 </HTML>
