--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ mikaela.katro@hotmail.com</a>
 <P> <B>This is a new paragraph!</B>
 <BR> <B><I>At the end of our streets is sunrise;</BR> 
 <BR> <B><I>At the end of our streets are spars;</BR>
-<BR> <B><I>At the end of our streets is sunset; At the end of our streets the stars. -George Sterling.</I></BR>
+<BR> <B><I>At the end of our streets is sunset;</BR>
+<BR> <B><I>At the end of our streets the stars. -George Sterling.</I></BR>
 <HR>
 </BODY>
 </HTML>
