--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ mikaela.katro@hotmail.com</a>.
 <BR> <B><I>At the end of our streets is sunrise;
 <BR> <B><I>At the end of our streets are spars;
 <BR> <B><I>At the end of our streets is sunset;
-<BR> <B><I>At the end of our streets the stars. -George Sterling.</I></BR>
+<BR> <B><I>At the end of our streets the stars. 
+<BR> <B>-George Sterling.</I></BR>
 <HR>
 </BODY>
 </HTML>
