--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <TITLE>mikaelan sivu</TITLE>
 </HEAD>
 <BODY BGCOLOR="FFFFFF">
-<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
+<CENTER> ALIGN="BOTTOM"> </CENTER>
 <HR>
 <H1>mikaela's photo booth</H1>
   
