--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <a href="https://www.instagram.com/mikaelakatro/">See my photos</a>
 on Instagram
 
-<H2>This is a Medium Header</H2>
+<H2>Moments and thoughts – the way I see things</H2>
 Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
 mikaela.katro@hotmail.com</a>.
 <BR>                                                         
