--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <HR>
 <H1>mikaela's photo booth</H1>
   
-<img src="5877_10151750931413534_1392706102_n.jpg" width="350"/>
+<img src="5877_10151750931413534_1392706102_n.jpg" width="350"/> <img src="10171144_10152460393608534_847648205717890747_n.jpg width="350"
+
  <BR> 
  <BR>
  </BR>
@@ -18,7 +19,7 @@
 <a href="https://www.instagram.com/mikaelakatro/">See my photos</a>
 on Instagram
 
-<H2>Moments and thoughts – the way I see things</H2>
+<H2>Moments and thoughts – the way I see things.</H2>
 Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
 mikaela.katro@hotmail.com</a>.
 <BR>                                                         
