--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 <HR>
 <H1>mikaela's photo booth</H1>
   
+  <div class="polaroid">
+  <img src="img_5terre.jpg" alt="5 Terre" style="width:100%">
+  <div class="container">
+    <p>Cinque Terre</p>
+  </div>
+</div>'
+  
 <img src="5877_10151750931413534_1392706102_n.jpg" width="350"/> 
 <img src="10171144_10152460393608534_847648205717890747_n.jpg" width="350"/> 
 
