--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <H1>mikaela's photo booth</H1>
   
   <div class="polaroid">
-  <img src="img_5terre.jpg" alt="5 Terre" style="width:100%">
+  <img src="5877_10151750931413534_1392706102_n.jpg" alt="5 Terre" style="width:100%">
   <div class="container">
     <p>Cinque Terre</p>
   </div>
