--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
 
 <HR>
 <H1>mikaela's photo booth</H1>
+
+  body {margin:25px;}
+
+div.polaroid {
+  width: 80%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}
+
+div.container {
+  text-align: center;
+  padding: 10px 20px;
+}
   
   <div class="polaroid">
   <img src="5877_10151750931413534_1392706102_n.jpg" alt="5 Terre" style="width:50%">
