--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <HR>
 <H1>mikaela's photo booth</H1>
 
-  body {margin:25px;}
+  <style>
+body {margin:25px;}
 
 div.polaroid {
   width: 80%;
@@ -20,7 +21,7 @@ div.container {
   text-align: center;
   padding: 10px 20px;
 }
-  
+ <style>  
   <div class="polaroid">
   <img src="5877_10151750931413534_1392706102_n.jpg" alt="5 Terre" style="width:50%">
   <div class="container">
