--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <HR>
 <H1>mikaela's photo booth</H1>
 
- 
+<style> 
 body {margin:25px;}
 
 div.polaroid {
@@ -21,7 +21,9 @@ div.container {
   text-align: center;
   padding: 10px 20px;
 }
+ </style>
  
+ <body>
   <div class="polaroid">
   <img src="5877_10151750931413534_1392706102_n.jpg" alt="5 Terre" style="width:50%">
   <div class="container">
