--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-<HTML>
-<HEAD>
-<TITLE>mikaelan sivu</TITLE>
-</HEAD>
-<BODY BGCOLOR="FFFFFF">
-
-<HR>
-<H1>mikaela's photo booth</H1>
-
-<style> 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
 body {margin:25px;}
 
 div.polaroid {
@@ -21,9 +15,12 @@ div.container {
   text-align: center;
   padding: 10px 20px;
 }
- </style>
- 
- <body>
+</style>
+</head>
+<body>
+
+<h2>mikaela's photo booth</h2>
+
   <div class="polaroid">
   <img src="5877_10151750931413534_1392706102_n.jpg" alt="5 Terre" style="width:50%">
   <div class="container">
