--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 body {margin:25px;}
 
 div.polaroid {
-  width: 100%;
+  width: 50%;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
@@ -24,7 +24,7 @@ div.container {
   <div class="polaroid">
   <img src="5877_10151750931413534_1392706102_n.jpg" alt="5 Terre" style="width:100%">
   <div class="container">
-    <p>Cinque Terre</p>
+    <p>Heatwave/Grand Canyon</p>
   </div>
 </div>'
   
