--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@ div.container {
   <div class="container">
     <p>Heatwave/Grand Canyon</p>
   </div>
-</div>'
+</div>
   
-<img src="5877_10151750931413534_1392706102_n.jpg" width="350"/> 
-<img src="10171144_10152460393608534_847648205717890747_n.jpg" width="350"/> 
+   <div class="polaroid">
+  <img src="10171144_10152460393608534_847648205717890747_n.jpg" alt="5 Terre" style="width:100%">
+  <div class="container">
+    <p>Heatwave/Grand Canyon</p>
+  </div>
+</div>
+  
+
 
  <BR> 
  <BR>
