--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 body {margin:25px;}
 
 div.polaroid {
-  width: 35%;
+  width: 30%;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
@@ -35,14 +35,18 @@ div.container {
   </div>
 </div>
   
-
+  <div class="polaroid">
+  <img src="1010269_10151758799748534_1095667913_n.jpg" alt="5 Terre" style="width:100%">
+  <div class="container">
+    <p>Heatwave/Grand Canyon</p>
+  </div>
+</div>
 
  <BR> 
  <BR>
  </BR>
   
-  
-  
+    
   
 <a href="https://www.instagram.com/mikaelakatro/">See my photos</a>
 on Instagram
