--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ div.container {
 </head>
 <body>
 
-<h2>mikaela's photo booth</h2>
+<h2>Moments and thoughts – the way I see things.</h2>
 
   <div class="polaroid">
   <img src="5877_10151750931413534_1392706102_n.jpg" alt="5 Terre" style="width:100%">
@@ -31,27 +31,26 @@ div.container {
    <div class="polaroid">
   <img src="10171144_10152460393608534_847648205717890747_n.jpg" alt="5 Terre" style="width:100%">
   <div class="container">
-    <p>Heatwave/Grand Canyon</p>
+    <p>Some shopping/Tel Aviv</p>
   </div>
 </div>
   
   <div class="polaroid">
   <img src="1010269_10151758799748534_1095667913_n.jpg" alt="5 Terre" style="width:100%">
   <div class="container">
-    <p>Heatwave/Grand Canyon</p>
+    <p>Venice Beach/Los Angeles</p>
   </div>
 </div>
 
  <BR> 
- <BR>
+ 
  </BR>
   
-    
+ 
   
 <a href="https://www.instagram.com/mikaelakatro/">See my photos</a>
 on Instagram
 
-<H2>Moments and thoughts – the way I see things.</H2>
 Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
 mikaela.katro@hotmail.com</a>.
 <BR>                                                         
