--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@ div.container {
 <a href="https://www.instagram.com/mikaelakatro/">See my photos</a>
 on Instagram
 
-Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
-mikaela.katro@hotmail.com</a>.
 <BR>                                                         
 <BR>
 <BR> <B><I>At the end of our streets is sunrise;
@@ -61,6 +59,8 @@ mikaela.katro@hotmail.com</a>.
 <BR> <B><I>At the end of our streets the stars. 
 
 <BR><B>-George Sterling.</I></BR>
+Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
+mikaela.katro@hotmail.com</a>
 <HR>
 </BODY>
 </HTML>
