--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ div.container {
 </style>
 </head>
 <body>
-
+<HR>
 <h2>Moments and thoughts – the way I see things.</h2>
 
   <div class="polaroid">
@@ -59,8 +59,9 @@ on Instagram
 <BR> <B><I>At the end of our streets the stars. 
 
 <BR><B>-George Sterling.</I></BR>
+<BR>
 Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
-mikaela.katro@hotmail.com</a>
+mikaela.katro@hotmail.com</a></BR>
 <HR>
 </BODY>
 </HTML>
