--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ on Instagram
 <BR> <B><I>At the end of our streets the stars. 
 
 <BR><B>-George Sterling.</I></BR>
-<BR>
+
+  <body>
+  <BR>
 Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
 mikaela.katro@hotmail.com</a></BR>
 <HR>
