--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ on Instagram
 <BR> <B><I>At the end of our streets is sunset;
 <BR> <B><I>At the end of our streets the stars. 
 
-<BR><B>-George Sterling.</I></BR>
+<BR><B>-George Sterling</I></BR>
 
   <body>
   <BR>
