--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ div.container {
   <div class="polaroid">
   <img src="1010269_10151758799748534_1095667913_n.jpg" alt="5 Terre" style="width:100%">
   <div class="container">
-    <p>Venice Beach/Los Angeles</p>
+    <p>That's the Beach/Los Angeles</p>
   </div>
 </div>
 
@@ -60,7 +60,7 @@ on Instagram
 
 <BR><B>-George Sterling</I></BR>
 
-  <body>
+<body>
   <BR>
 Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
 mikaela.katro@hotmail.com</a></BR>
