--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ on Instagram
 <BR> <B><I>At the end of our streets is sunset;
 <BR> <B><I>At the end of our streets the stars. 
 
-<BR><B>-George Sterling</I></BR>
+  <BR><B>-George Sterling</I></B></BR>
 
-<body>
+
   <BR>
 Send me mail at <a href="mailto:mikaela.katro@hotmail.com">
 mikaela.katro@hotmail.com</a></BR>
