--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ on Instagram
 
 <BR>                                                         
 <BR>
-<BR> <B><I>At the end of our streets is sunrise;
-<BR> <B><I>At the end of our streets are spars;
-<BR> <B><I>At the end of our streets is sunset;
-<BR> <B><I>At the end of our streets the stars. 
+<BR> <B><I>At the end of our streets is sunrise;</I></B>
+<BR> <B><I>At the end of our streets are spars;</I></B>
+<BR> <B><I>At the end of our streets is sunset;</I></B>
+<BR> <B><I>At the end of our streets the stars. </I></B>
 
   <BR><B>-George Sterling</I></B></BR>
 
