--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@ div.container {
   text-align: center;
   padding: 10px 20px;
 }
+  
+ .column 
+  {
+    flex: 33.33%;
+    padding: 5px;
+   } 
+  
 </style>
 </head>
 <body>
@@ -22,6 +29,7 @@ div.container {
 <h2>Moments and thoughts – the way I see things.</h2>
 
   <div class="polaroid">
+  <div class="column">  
   <img src="5877_10151750931413534_1392706102_n.jpg" alt="5 Terre" style="width:100%">
   <div class="container">
     <p>Heatwave/Grand Canyon</p>
@@ -29,6 +37,7 @@ div.container {
 </div>
   
    <div class="polaroid">
+  <div class="column">     
   <img src="10171144_10152460393608534_847648205717890747_n.jpg" alt="5 Terre" style="width:100%">
   <div class="container">
     <p>Some shopping/Tel Aviv</p>
@@ -36,6 +45,7 @@ div.container {
 </div>
   
   <div class="polaroid">
+  <div class="column">  
   <img src="1010269_10151758799748534_1095667913_n.jpg" alt="5 Terre" style="width:100%">
   <div class="container">
     <p>That's the Beach/Los Angeles</p>
