--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ div.container {
     <p>Heatwave/Grand Canyon</p>
   </div>
 </div>
+   </div>
+</div>
   
    <div class="polaroid">
   <div class="column">     
@@ -39,7 +41,8 @@ div.container {
     <p>Some shopping/Tel Aviv</p>
   </div>
 </div>
-  
+   </div>
+
   <div class="polaroid">
   <div class="column">  
   <img src="1010269_10151758799748534_1095667913_n.jpg" alt="5 Terre" style="width:100%">
@@ -47,7 +50,8 @@ div.container {
     <p>That's the Beach/Los Angeles</p>
   </div>
 </div>
-    
+  </div>
+
     
    
     .column { 
